src/test/compile-fail/macro-local-data-key-priv.rs
// Copyright 2013 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// check that the local data keys are private by default.

mod bar {
    local_data_key!(baz: f64)
}

fn main() {
    bar::baz.replace(Some(-10.0));
    //~^ ERROR static `baz` is private
}
